changes site author from Jason Figueroa to Jason

--- a/authors.html
+++ b/authors.html
@@ -6,7 +6,7 @@
   <title>Jason Figueroa - Authors</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="Jason Figueroa">
+  <meta name="author" content="Jason">
 
   <link rel="shortcut icon" href="https://jasonfigueroa.github.io/images/favicon.ico">
 
@@ -69,7 +69,7 @@
   <article>
     <h1>Authors on Jason Figueroa</h1>
 
-    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">Jason Figueroa</a> (2)</li>
+    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason.html">Jason</a> (2)</li>
     </ul>
   </article>
 
