--- a/remove-full-path-from-terminal.html
+++ b/remove-full-path-from-terminal.html
@@ -6,7 +6,7 @@
   <title>Remove Full Path From Terminal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="Jason Figueroa">
+  <meta name="author" content="Jason">
 
   <link rel="shortcut icon" href="https://jasonfigueroa.github.io/images/favicon.ico">
 
@@ -87,7 +87,7 @@
         </div>
         <div class="post_list">
             <span>By </span>
-            <a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
+            <a href="https://jasonfigueroa.github.io/author/jason.html">@Jason</a>
             <span> in </span>
             <span class="post_category"><a href="https://jasonfigueroa.github.io/category/bash.html" rel="bookmark" title="Permalink to bash">[ bash ]</a></span>
             <span class="post_date">Wed 08 March 2017</span>
@@ -105,7 +105,7 @@
 
                 <a  target="_blank" title="Linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=https://jasonfigueroa.github.io/remove-full-path-from-terminal.html&title=Remove Full Path From Terminal" rel="nofollow" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=450,width=650');return false;"><img src="https://jasonfigueroa.github.io/theme/images/icons/linkedin-s.png"></a>
 
-                <span class="mail"><a href="mailto:?subject=Remove Full Path From Terminal&amp;body=Viens découvrir un article à propos de [Remove Full Path From Terminal] sur le site de Jason Figueroa. https://jasonfigueroa.github.io/remove-full-path-from-terminal.html" title="Share by Email" target="_blank"><img src="https://jasonfigueroa.github.io/theme/images/icons/mail-s.png"></a></span>
+                <span class="mail"><a href="mailto:?subject=Remove Full Path From Terminal&amp;body=Viens découvrir un article à propos de [Remove Full Path From Terminal] sur le site de Jason. https://jasonfigueroa.github.io/remove-full-path-from-terminal.html" title="Share by Email" target="_blank"><img src="https://jasonfigueroa.github.io/theme/images/icons/mail-s.png"></a></span>
             </div>
             -->
         </div>
