--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@
   <title> Jason Figueroa | Passionate Learner </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="Jason Figueroa">
+  <meta name="author" content="Jason">
 
   <link rel="shortcut icon" href="https://jasonfigueroa.github.io/images/favicon.ico">
 
@@ -79,8 +79,8 @@
   <article>
 <h2>Tags</h2>
 <ul>
-    <li><a href="https://jasonfigueroa.github.io/tag/c-programming.html">c programming</li>
     <li><a href="https://jasonfigueroa.github.io/tag/bash.html">bash</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/c-programming.html">c programming</li>
 </ul>
   </article>
 
