--- a/pages/about-site.html
+++ b/pages/about-site.html
@@ -6,7 +6,7 @@
   <title>About This Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="Jason Figueroa">
+  <meta name="author" content="Jason">
 
   <link rel="shortcut icon" href="https://jasonfigueroa.github.io/images/favicon.ico">
 
