after adding python3 Makefile error

--- a/authors.html
+++ b/authors.html
@@ -60,6 +60,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
     </ul> 
 
 
@@ -69,7 +70,7 @@
   <article>
     <h1>Authors on Jason Figueroa</h1>
 
-    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason.html">Jason</a> (2)</li>
+    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason.html">Jason</a> (3)</li>
     </ul>
   </article>
 
