--- a/archives.html
+++ b/archives.html
@@ -70,6 +70,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
     </ul> 
 
 
@@ -80,6 +81,8 @@
 <h1>Archives</h1>
 
 <dl>
+    <dt>Tue 01 August 2017</dt>
+    <dd><a href="https://jasonfigueroa.github.io/pelican-python3-makefile-error.html">Pelican Python3 Makefile error</a></dd>
     <dt>Wed 29 March 2017</dt>
     <dd><a href="https://jasonfigueroa.github.io/back-to-c.html">Back to C</a></dd>
     <dt>Wed 08 March 2017</dt>
