--- a/archives.html
+++ b/archives.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>Jason Figueroa</title>
-        <link rel="stylesheet" href="http://localhost:8000/theme/css/main.css" />
-        <link href="http://localhost:8000/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jason Figueroa Atom Feed" />
+        <link rel="stylesheet" href="https://jasonfigueroa.github.io/theme/css/main.css" />
+        <link href="https://jasonfigueroa.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jason Figueroa Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,12 +13,12 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://localhost:8000/">Jason Figueroa </a></h1>
+                <h1><a href="https://jasonfigueroa.github.io/">Jason Figueroa </a></h1>
                 <nav><ul>
-                    <li><a href="http://localhost:8000/pages/about-me.html">About Me</a></li>
-                    <li><a href="http://localhost:8000/pages/about-site.html">About This Site</a></li>
-                    <li><a href="http://localhost:8000/category/bash.html">bash</a></li>
-                    <li><a href="http://localhost:8000/category/c-programming.html">c programming</a></li>
+                    <li><a href="https://jasonfigueroa.github.io/pages/about-me.html">About Me</a></li>
+                    <li><a href="https://jasonfigueroa.github.io/pages/about-site.html">About This Site</a></li>
+                    <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
+                    <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -26,9 +26,9 @@
 
 <dl>
     <dt>Wed 29 March 2017</dt>
-    <dd><a href="http://localhost:8000/back-to-c.html">Back to C</a></dd>
+    <dd><a href="https://jasonfigueroa.github.io/back-to-c.html">Back to C</a></dd>
     <dt>Wed 08 March 2017</dt>
-    <dd><a href="http://localhost:8000/remove-full-path-from-terminal.html">Remove Full Path From Terminal</a></dd>
+    <dd><a href="https://jasonfigueroa.github.io/remove-full-path-from-terminal.html">Remove Full Path From Terminal</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
@@ -44,7 +44,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://localhost:8000/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://jasonfigueroa.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
