--- a/categories.html
+++ b/categories.html
@@ -70,6 +70,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
     </ul> 
 
 
@@ -81,6 +82,7 @@
 <ul class="category_folder">
 	<li><a href="category/bash.html">bash</a></li>
 	<li><a href="category/c-programming.html">c programming</a></li>
+	<li><a href="category/dotnet-core.html">dotnet core</a></li>
 </ul>
   </article>
 
