--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -60,6 +60,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
     </ul> 
 
 
