--- a/tags.html
+++ b/tags.html
@@ -70,6 +70,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
     </ul> 
 
 
@@ -79,6 +80,7 @@
   <article>
 <h2>Tags</h2>
 <ul>
+    <li><a href="https://jasonfigueroa.github.io/tag/dotnet-core.html">dotnet core</li>
     <li><a href="https://jasonfigueroa.github.io/tag/bash.html">bash</li>
     <li><a href="https://jasonfigueroa.github.io/tag/c-programming.html">c programming</li>
 </ul>
