--- a/back-to-c.html
+++ b/back-to-c.html
@@ -70,6 +70,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li class="active"><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
     </ul> 
 
 
