--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
     </ul> 
 
 
@@ -84,6 +85,13 @@
 
 <ol>
 	<h2 class="latest">Latest Posts</h2>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/gitignore-for-dotnet-core.html" rel="bookmark" title="Permalink to .gitignore for Dotnet Core">.gitignore for Dotnet Core</a></h2>
+		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
+		<span> in </span>
+		<span class="post_category"><a href="https://jasonfigueroa.github.io/category/dotnet-core.html" rel="bookmark" title="Permalink to dotnet core">[ dotnet core ]</a></span>
+		<span class="post_date">Wed 17 January 2018</span>
+	</li>
 	<li class="post_list"><p class="post_entry">
 		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/back-to-c.html" rel="bookmark" title="Permalink to Back to C">Back to C</a></h2>
 		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
