latest version of generated content

--- a/archives.html
+++ b/archives.html
@@ -71,6 +71,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
     </ul> 
 
 
@@ -81,6 +82,8 @@
 <h1>Archives</h1>
 
 <dl>
+    <dt>Thu 18 January 2018</dt>
+    <dd><a href="https://jasonfigueroa.github.io/linux-mint-setup-hexchat.html">Linux Mint: Setup HexChat</a></dd>
     <dt>Wed 17 January 2018</dt>
     <dd><a href="https://jasonfigueroa.github.io/bash-display-current-directory-and-branch.html">Bash Display Current Directory & Git Branch</a></dd>
     <dt>Wed 17 January 2018</dt>
