--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
     </ul> 
 
 
@@ -85,6 +86,13 @@
 
 <ol>
 	<h2 class="latest">Latest Posts</h2>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/linux-mint-setup-hexchat.html" rel="bookmark" title="Permalink to Linux Mint: Setup HexChat">Linux Mint: Setup HexChat</a></h2>
+		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
+		<span> in </span>
+		<span class="post_category"><a href="https://jasonfigueroa.github.io/category/linux-mint.html" rel="bookmark" title="Permalink to linux mint">[ linux mint ]</a></span>
+		<span class="post_date">Thu 18 January 2018</span>
+	</li>
 	<li class="post_list"><p class="post_entry">
 		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/bash-display-current-directory-and-branch.html" rel="bookmark" title="Permalink to Bash Display Current Directory & Git Branch">Bash Display Current Directory & Git Branch</a></h2>
 		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
