--- a/authors.html
+++ b/authors.html
@@ -61,6 +61,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
     </ul> 
 
 
@@ -70,7 +71,7 @@
   <article>
     <h1>Authors on Jason Figueroa</h1>
 
-    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">Jason Figueroa</a> (4)</li>
+    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">Jason Figueroa</a> (5)</li>
     </ul>
   </article>
 
