--- a/categories.html
+++ b/categories.html
@@ -71,6 +71,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
     </ul> 
 
 
@@ -83,6 +84,7 @@
 	<li><a href="category/bash.html">bash</a></li>
 	<li><a href="category/c-programming.html">c programming</a></li>
 	<li><a href="category/dotnet-core.html">dotnet core</a></li>
+	<li><a href="category/linux-mint.html">linux mint</a></li>
 </ul>
   </article>
 
