--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -61,6 +61,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
     </ul> 
 
 
