--- a/tags.html
+++ b/tags.html
@@ -71,6 +71,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
     </ul> 
 
 
@@ -82,6 +83,7 @@
 <ul>
     <li><a href="https://jasonfigueroa.github.io/tag/dotnet-core.html">dotnet core</li>
     <li><a href="https://jasonfigueroa.github.io/tag/c-programming.html">c programming</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/linux-mint.html">linux mint</li>
     <li><a href="https://jasonfigueroa.github.io/tag/bash.html">bash</li>
 </ul>
   </article>
