latest version of generated files

--- a/archives.html
+++ b/archives.html
@@ -72,6 +72,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/visual-studio-code.html">visual studio code</a></li>
     </ul> 
 
 
@@ -82,6 +83,8 @@
 <h1>Archives</h1>
 
 <dl>
+    <dt>Sat 20 January 2018</dt>
+    <dd><a href="https://jasonfigueroa.github.io/vscode-debug-console-apps-with-user-input.html">VS Code Debug Console Apps w/User Input</a></dd>
     <dt>Thu 18 January 2018</dt>
     <dd><a href="https://jasonfigueroa.github.io/linux-mint-setup-hexchat.html">Linux Mint: Setup HexChat</a></dd>
     <dt>Wed 17 January 2018</dt>
