--- a/categories.html
+++ b/categories.html
@@ -72,6 +72,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/visual-studio-code.html">visual studio code</a></li>
     </ul> 
 
 
@@ -85,6 +86,7 @@
 	<li><a href="category/c-programming.html">c programming</a></li>
 	<li><a href="category/dotnet-core.html">dotnet core</a></li>
 	<li><a href="category/linux-mint.html">linux mint</a></li>
+	<li><a href="category/visual-studio-code.html">visual studio code</a></li>
 </ul>
   </article>
 
