--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/visual-studio-code.html">visual studio code</a></li>
     </ul> 
 
 
@@ -86,6 +87,13 @@
 
 <ol>
 	<h2 class="latest">Latest Posts</h2>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/vscode-debug-console-apps-with-user-input.html" rel="bookmark" title="Permalink to VS Code Debug Console Apps w/User Input">VS Code Debug Console Apps w/User Input</a></h2>
+		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
+		<span> in </span>
+		<span class="post_category"><a href="https://jasonfigueroa.github.io/category/visual-studio-code.html" rel="bookmark" title="Permalink to visual studio code">[ visual studio code ]</a></span>
+		<span class="post_date">Sat 20 January 2018</span>
+	</li>
 	<li class="post_list"><p class="post_entry">
 		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/linux-mint-setup-hexchat.html" rel="bookmark" title="Permalink to Linux Mint: Setup HexChat">Linux Mint: Setup HexChat</a></h2>
 		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
