--- a/tags.html
+++ b/tags.html
@@ -72,6 +72,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/visual-studio-code.html">visual studio code</a></li>
     </ul> 
 
 
@@ -81,10 +82,11 @@
   <article>
 <h2>Tags</h2>
 <ul>
-    <li><a href="https://jasonfigueroa.github.io/tag/dotnet-core.html">dotnet core</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/visual-studio-code.html">visual studio code</li>
     <li><a href="https://jasonfigueroa.github.io/tag/c-programming.html">c programming</li>
     <li><a href="https://jasonfigueroa.github.io/tag/linux-mint.html">linux mint</li>
     <li><a href="https://jasonfigueroa.github.io/tag/bash.html">bash</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/dotnet-core.html">dotnet core</li>
 </ul>
   </article>
 
