--- a/authors.html
+++ b/authors.html
@@ -60,6 +60,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/curl.html">curl</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/visual-studio-code.html">visual studio code</a></li>
@@ -72,7 +73,7 @@
   <article>
     <h1>Authors on Jason Figueroa</h1>
 
-    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">Jason Figueroa</a> (6)</li>
+    <ul>        <li><a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">Jason Figueroa</a> (7)</li>
     </ul>
   </article>
 
