--- a/categories.html
+++ b/categories.html
@@ -70,6 +70,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/curl.html">curl</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/dotnet-core.html">dotnet core</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/linux-mint.html">linux mint</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/visual-studio-code.html">visual studio code</a></li>
@@ -84,6 +85,7 @@
 <ul class="category_folder">
 	<li><a href="category/bash.html">bash</a></li>
 	<li><a href="category/c-programming.html">c programming</a></li>
+	<li><a href="category/curl.html">curl</a></li>
 	<li><a href="category/dotnet-core.html">dotnet core</a></li>
 	<li><a href="category/linux-mint.html">linux mint</a></li>
 	<li><a href="category/visual-studio-code.html">visual studio code</a></li>
