Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -43,7 +43,7 @@
     <nav class="nav">
       <ul class="list-bare">
       
-          <li><a class="nav__link" href="http://localhost:8000">Blog</a></li>
+          <li><a class="nav__link" href="https://jasonfigueroa.github.io">Blog</a></li>
           <li><a class="nav__link" href="/pages/about-me.html">About Me</a></li>
           <li><a class="nav__link" href="/pages/about-site.html">About This Site</a></li>
          
