Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
 
 
@@ -84,6 +85,8 @@
 <h1>Archives</h1>
 
 <dl>
+    <dt>Sun 25 July 2021</dt>
+    <dd><a href="https://jasonfigueroa.github.io/install-a-vagrant-box-with-mysql.html">Install a Vagrant Box with MySQL</a></dd>
     <dt>Tue 01 August 2017</dt>
     <dd><a href="https://jasonfigueroa.github.io/pelican-python3-makefile-error.html">Pelican Python3 Makefile error</a></dd>
     <dt>Wed 29 March 2017</dt>
