Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -73,6 +73,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -85,6 +86,8 @@
 <h1>Archives</h1>
 
 <dl>
+    <dt>Sat 31 July 2021</dt>
+    <dd><a href="https://jasonfigueroa.github.io/local-mysql-database-with-docker-compose.html">Local MySQL Database with Docker Compose</a></dd>
     <dt>Sun 25 July 2021</dt>
     <dd><a href="https://jasonfigueroa.github.io/install-a-vagrant-box-with-mysql.html">Install a Vagrant Box with MySQL</a></dd>
     <dt>Tue 01 August 2017</dt>
