--- a/categories.html
+++ b/categories.html
@@ -73,6 +73,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -86,6 +87,7 @@
 <ul class="category_folder">
 	<li><a href="category/bash.html">bash</a></li>
 	<li><a href="category/c-programming.html">c programming</a></li>
+	<li><a href="category/docker.html">docker</a></li>
 	<li><a href="category/pelican.html">pelican</a></li>
 	<li><a href="category/vagrant.html">vagrant</a></li>
 </ul>
