--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -86,6 +87,13 @@
 
 <ol class="posts">
 	<h2 class="latest">Latest Posts</h2>
+	<li class="post_list"><p class="post_entry">
+		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/local-mysql-database-with-docker-compose.html" rel="bookmark" title="Permalink to Local MySQL Database with Docker Compose">Local MySQL Database with Docker Compose</a></h2>
+		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
+		<span> in </span>
+		<span class="post_category"><a href="https://jasonfigueroa.github.io/category/docker.html" rel="bookmark" title="Permalink to docker">[ docker ]</a></span>
+		<span class="post_date">Sat 31 July 2021</span>
+	</li>
 	<li class="post_list"><p class="post_entry">
 		<h2 class="post_title"><a href="https://jasonfigueroa.github.io/install-a-vagrant-box-with-mysql.html" rel="bookmark" title="Permalink to Install a Vagrant Box with MySQL">Install a Vagrant Box with MySQL</a></h2>
 		<a href="https://jasonfigueroa.github.io/author/jason-figueroa.html">@Jason Figueroa</a>
