--- a/tags.html
+++ b/tags.html
@@ -73,6 +73,7 @@
     <ul class="navbar">
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -84,8 +85,9 @@
   <article>
 <h2>Tags</h2>
 <ul>
-    <li><a href="https://jasonfigueroa.github.io/tag/vagrant.html">vagrant</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/docker.html">docker</li>
     <li><a href="https://jasonfigueroa.github.io/tag/mysql.html">mysql</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/vagrant.html">vagrant</li>
     <li><a href="https://jasonfigueroa.github.io/tag/pelican.html">pelican</li>
     <li><a href="https://jasonfigueroa.github.io/tag/c-programming.html">c programming</li>
     <li><a href="https://jasonfigueroa.github.io/tag/bash.html">bash</li>
