Generate Pelican site

--- a/local-mysql-database-with-docker-compose.html
+++ b/local-mysql-database-with-docker-compose.html
@@ -31,11 +31,11 @@
 <meta name="twitter:creator" content="">
 <meta name="twitter:url" content="https://jasonfigueroa.github.io/local-mysql-database-with-docker-compose.html">
 <meta name="twitter:title" content="Jason Figueroa ~ Local MySQL Database with Docker Compose">
-<meta name="twitter:description" content="These are some brief instructions for installing a local MySQL database, using Docker Compose, for local development. Install Containers Download the docker-compose.yml file sh wget https://gist.githubusercontent.com/jasonfigueroa/78db9eb5797b3351007b44fb18eae956/raw/871f6ee5354bfd61fcb53dace54a56c29b5f1a56/docker-compose.yml Install the containers docker-compose up Setup Non-Root User See the containers running docker-compose ps …">
+<meta name="twitter:description" content="These are some brief instructions for installing a local MySQL database, using Docker Compose, for local development. Install Containers Download the docker-compose.yml file wget https://gist.githubusercontent.com/jasonfigueroa/78db9eb5797b3351007b44fb18eae956/raw/871f6ee5354bfd61fcb53dace54a56c29b5f1a56/docker-compose.yml Install the containers docker-compose up Setup Non-Root User See the containers running docker-compose ps Take …">
 
 <!-- Facebook Meta Data -->
 <meta property="og:title" content="Jason Figueroa ~ Local MySQL Database with Docker Compose" />
-<meta property="og:description" content="These are some brief instructions for installing a local MySQL database, using Docker Compose, for local development. Install Containers Download the docker-compose.yml file sh wget https://gist.githubusercontent.com/jasonfigueroa/78db9eb5797b3351007b44fb18eae956/raw/871f6ee5354bfd61fcb53dace54a56c29b5f1a56/docker-compose.yml Install the containers docker-compose up Setup Non-Root User See the containers running docker-compose ps …" />
+<meta property="og:description" content="These are some brief instructions for installing a local MySQL database, using Docker Compose, for local development. Install Containers Download the docker-compose.yml file wget https://gist.githubusercontent.com/jasonfigueroa/78db9eb5797b3351007b44fb18eae956/raw/871f6ee5354bfd61fcb53dace54a56c29b5f1a56/docker-compose.yml Install the containers docker-compose up Setup Non-Root User See the containers running docker-compose ps Take …" />
 <meta property="og:image" content="" />
 </head>
 
@@ -92,8 +92,7 @@
 <ol>
 <li>
 <p>Download the docker-compose.yml file</p>
-<p><code>sh
-wget https://gist.githubusercontent.com/jasonfigueroa/78db9eb5797b3351007b44fb18eae956/raw/871f6ee5354bfd61fcb53dace54a56c29b5f1a56/docker-compose.yml</code></p>
+<p><code>wget https://gist.githubusercontent.com/jasonfigueroa/78db9eb5797b3351007b44fb18eae956/raw/871f6ee5354bfd61fcb53dace54a56c29b5f1a56/docker-compose.yml</code></p>
 </li>
 <li>
 <p>Install the containers</p>
