Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -74,6 +74,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet.html">dotnet</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -88,6 +89,7 @@
 	<li><a href="category/bash.html">bash</a></li>
 	<li><a href="category/c-programming.html">c programming</a></li>
 	<li><a href="category/docker.html">docker</a></li>
+	<li><a href="category/dotnet.html">dotnet</a></li>
 	<li><a href="category/pelican.html">pelican</a></li>
 	<li><a href="category/vagrant.html">vagrant</a></li>
 </ul>
