--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet.html">dotnet</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -86,6 +87,8 @@
 <h1>Archives</h1>
 
 <dl>
+    <dt>Wed 04 August 2021</dt>
+    <dd><a href="https://jasonfigueroa.github.io/entity-framework-core-scaffold-a-mysql-database.html">Entity Framework Core Scaffold a MySQL Database</a></dd>
     <dt>Sat 31 July 2021</dt>
     <dd><a href="https://jasonfigueroa.github.io/local-mysql-database-with-docker-compose.html">Local MySQL Database with Docker Compose</a></dd>
     <dt>Sun 25 July 2021</dt>
