--- a/local-mysql-database-with-docker-compose.html
+++ b/local-mysql-database-with-docker-compose.html
@@ -74,6 +74,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li class="active"><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet.html">dotnet</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -178,6 +179,10 @@
 
 </li>
 </ol>
+<hr>
+<p><strong>NOTE</strong></p>
+<p>An ERD for the Chinook database can be found <a href="https://github.com/lerocha/chinook-database/wiki/Chinook-Schema" target="_blank">here</a>.</p>
+<hr>
         </div>
         <div class="post_list">
             <span>By </span>
