--- a/remove-full-path-from-terminal.html
+++ b/remove-full-path-from-terminal.html
@@ -74,6 +74,7 @@
       <li class="active"><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet.html">dotnet</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
