--- a/tags.html
+++ b/tags.html
@@ -74,6 +74,7 @@
       <li><a href="https://jasonfigueroa.github.io/category/bash.html">bash</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/c-programming.html">c programming</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/docker.html">docker</a></li>
+      <li><a href="https://jasonfigueroa.github.io/category/dotnet.html">dotnet</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/pelican.html">pelican</a></li>
       <li><a href="https://jasonfigueroa.github.io/category/vagrant.html">vagrant</a></li>
     </ul> 
@@ -85,8 +86,10 @@
   <article>
 <h2>Tags</h2>
 <ul>
-    <li><a href="https://jasonfigueroa.github.io/tag/docker.html">docker</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/entity-framework-core.html">entity framework core</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/dotnet.html">dotnet</li>
     <li><a href="https://jasonfigueroa.github.io/tag/mysql.html">mysql</li>
+    <li><a href="https://jasonfigueroa.github.io/tag/docker.html">docker</li>
     <li><a href="https://jasonfigueroa.github.io/tag/vagrant.html">vagrant</li>
     <li><a href="https://jasonfigueroa.github.io/tag/pelican.html">pelican</li>
     <li><a href="https://jasonfigueroa.github.io/tag/c-programming.html">c programming</li>
